--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clipboard project - {Tailwind CSS}</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/production.css">
 </head>
 <body>
-  
+  <h1 class="text-3xl">
+    Simple Tailwind Started
+  </h1>
 </body>
 </html>
