--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 <body>
   <!-- Hero section -->
   <section id="hero">
-    <div class="max-w-6xl mx-auto text-center mb-40 px-10 pt-16">
+    <div class="section-container mb-40 px-10 pt-16">
       <img src="./assets/images/logo.svg" alt="" class="mx-auto my-16" />
-      <h3 class="mb-8 text-4xl font-bold text-darkGrayisBlue md:text-5xl">A history of everything you copy</h3>
+      <h3>A history of everything you copy</h3>
 
       <p class="max-w-3xl mx-auto mb-10 text-2xl text-grayisBlue">
         Clipboard allow you to track and organize everything you copy. 
@@ -21,10 +21,22 @@
       </p>
 
       <!-- Buttons container -->
-      <div class="flex flex-col justify-center w-full space-y-6 text-xl text-white md:flex-row md:space-y-0 md:space-x-4">
-        <a href="#" class="p-4 px-8 rounded-full shadow-lg bg-strongCyan duration-200 hover:opacity-80">Download for iOS</a>
-        <a href="#" class="p-4 px-8 rounded-full shadow-lg bg-lightBlue duration-200 hover:opacity-80">Download for Mac</a>
+      <div class="button-container">
+        <a href="#" class="bg-strongCyan btn">Download for iOS</a>
+        <a href="#" class="bg-lightBlue btn">Download for Mac</a>
       </div>
+    </div>
+  </section>
+
+  <!-- Snippets section -->
+  <section id="snippets">
+    <div class="section-container my-20 px-10">
+      <h3>
+        Keep track of your snippets
+      </h3>
+      <p class="max-w-3xl mx-auto text-xl leading-9 text-center text-grayisBlue">
+        Clipboard Instantly stpres any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything
+      </p>
     </div>
   </section>
 </body>
