--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Hero section -->
   <section id="hero">
-    <div class="section-container mb-40 px-10 pt-16">
+    <div class="section-container mb-40 pt-16">
       <img src="./assets/images/logo.svg" alt="" class="mx-auto my-16" />
       <h3>A history of everything you copy</h3>
 
@@ -30,7 +30,7 @@
 
   <!-- Snippets section -->
   <section id="snippets">
-    <div class="section-container my-20 px-10">
+    <div class="section-container my-20">
       <h3>
         Keep track of your snippets
       </h3>
@@ -39,5 +39,48 @@
       </p>
     </div>
   </section>
+
+  <!-- Features section -->
+  <section id="features">
+    <div class="section-container my-20">
+      <div class="flex flex-col md:flex-row md:space-x-32 relative">
+        <!-- Image -->
+        <div class="md:w-1/2">
+          <img src="./assets/images/image-computer.png" alt="computer" class="md:absolute top-0 right-[50%]" />
+        </div>
+
+        <!-- Items Container -->
+        <div class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:mb-60 md:text-left md:pl-16 md:w-1/2">
+          <!-- Item 1 -->
+          <div>
+            <h5 class="mb-2 text-2xl font-bold text-darkGrayisBlue">Quick Search</h5>
+            <p>Easily search your snippets by content, category, web address, application, and more.</p>
+          </div>
+
+          <!-- Item 2 -->
+          <div>
+            <h5 class="mb-2 text-2xl font-bold text-darkGrayisBlue">iCloud Sync</h5>
+            <p>Instantly saves and syncs snippets across all your devices.</p>
+          </div>
+
+          <!-- Item 3 -->
+          <div>
+            <h5 class="mb-2 text-2xl font-bold text-darkGrayisBlue">Completely History</h5>
+            <p>Retrieve any snippets from the first moment you started using the app.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Acces Anywhere section -->
+  <div id="access">
+    <div class="section-container my-20">
+      <h3>Access Clipboard Anywhere</h3>
+      <p class="max-w-3xl mx-auto text-xl leading-9 text-center text-grayisBlue">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+
+      <img src="./assets/images/image-devices.png" alt="devices" />
+    </div>
+  </div>
 </body>
 </html>
