Добавлена разметка и стили для блока Supercharge

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <h3>
         Keep track of your snippets
       </h3>
-      <p class="max-w-3xl mx-auto text-xl leading-9 text-center text-grayisBlue">
+      <p class="section-content">
         Clipboard Instantly stpres any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything
       </p>
     </div>
@@ -53,19 +53,19 @@
         <div class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:mb-60 md:text-left md:pl-16 md:w-1/2">
           <!-- Item 1 -->
           <div>
-            <h5 class="mb-2 text-2xl font-bold text-darkGrayisBlue">Quick Search</h5>
+            <h5>Quick Search</h5>
             <p>Easily search your snippets by content, category, web address, application, and more.</p>
           </div>
 
           <!-- Item 2 -->
           <div>
-            <h5 class="mb-2 text-2xl font-bold text-darkGrayisBlue">iCloud Sync</h5>
+            <h5>iCloud Sync</h5>
             <p>Instantly saves and syncs snippets across all your devices.</p>
           </div>
 
           <!-- Item 3 -->
           <div>
-            <h5 class="mb-2 text-2xl font-bold text-darkGrayisBlue">Completely History</h5>
+            <h5>Completely History</h5>
             <p>Retrieve any snippets from the first moment you started using the app.</p>
           </div>
         </div>
@@ -77,10 +77,45 @@
   <div id="access">
     <div class="section-container my-20">
       <h3>Access Clipboard Anywhere</h3>
-      <p class="max-w-3xl mx-auto text-xl leading-9 text-center text-grayisBlue">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+      <p class="section-content">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
 
       <img src="./assets/images/image-devices.png" alt="devices" />
     </div>
   </div>
+
+  <!-- Supercharge section -->
+  <section id="supercharge">
+    <div class="section-container my-20">
+      <h3>Supercharge your workflow</h3>
+      <p class="section-content mb-16">
+        We've got the tools to boost your productivity.
+      </p>
+
+      <!-- Items container -->
+      <div class="flex flex-col items-center justify-between space-y-16 md:flex-row md:space-y-0 md:space-x-12">
+        
+        <!-- Item 1 -->
+        <div class="flex flex-col items-center space-y-5">
+          <img src="./assets/images/icon-blacklist.svg" alt="blacklist" class="mb-6" />
+          <h5>Create Blacklists</h5>
+          <p class="max-w-md text-grayisBlue">Easily search your snippets by content, category, web address, application, and more.</p>
+        </div>
+
+        <!-- Item 2 -->
+        <div class="flex flex-col items-center space-y-5">
+          <img src="./assets/images/icon-text.svg" alt="text" class="mb-6" />
+          <h5>Plain Text Snippets</h5>
+          <p class="max-w-md text-grayisBlue">Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+
+        <!-- Item 3 -->
+        <div class="flex flex-col items-center space-y-5">
+          <img src="./assets/images/icon-preview.svg" alt="preview" class="mb-6" />
+          <h5>Sneak Preview</h5>
+          <p class="max-w-md text-grayisBlue">Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
