--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <h3>
         Keep track of your snippets
       </h3>
-      <p class="section-content">
+      <p class="section-content mb-24 text-xl">
         Clipboard Instantly stpres any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything
       </p>
     </div>
@@ -113,6 +113,95 @@
           <img src="./assets/images/icon-preview.svg" alt="preview" class="mb-6" />
           <h5>Sneak Preview</h5>
           <p class="max-w-md text-grayisBlue">Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- References section -->
+  <section id="references">
+    <div class="flex flex-col items-center justify-between max-w-6xl px-10 mx-auto space-y-16 my-44 md:flex-row md:space-y-0">
+      <img src="./assets/images/logo-google.png" alt="google">
+      <img src="./assets/images/logo-ibm.png" alt="ibm">
+      <img src="./assets/images/logo-microsoft.png" alt="microsoft">
+      <img src="./assets/images/logo-hp.png" alt="hp">
+      <img src="./assets/images/logo-vector-graphics.png" alt="vector-graphics">
+    </div>
+  </section>
+
+  <!-- Bottom CTA section -->
+  <section id="bottom">
+    <div class="section-container my-20">
+      <h3>Clipboard for iOS and MacOS</h3>
+
+      <p class="max-w-3xl mx-auto mb-10 text-xl text-grayisBlue">
+        Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you're ready to start adding to your clipboard.
+      </p>
+
+      <!-- Buttons container -->
+      <div class="button-container">
+        <a href="#" class="bg-strongCyan btn">Download for iOS</a>
+        <a href="#" class="bg-lightBlue btn">Download for Mac</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer section -->
+  <section id="footer">
+    <div class="section-container">
+      <div class="flex flex-col items-center justify-between md:flex-row">
+        <!-- Image -->
+        <img src="./assets/images/logo.svg" alt="logo" class="scale-50" />
+
+        <!-- Containers for menu and social buttons -->
+        <div class="flex flex-col items-center justify-between flex-1 mb-10 spcae-y-6 md:flex-row md:mb-0 md:space-y-0 text-grayisBlue">
+          <!-- Menu -->
+          <div class="flex flex-col space-y-4 md:flex-row md:ml-24 md:space-x-24 md:space-y-0 mb-5 md:mb-0">
+            
+            <!-- Menu 1 -->
+            <div class="flex flex-col space-y-4 text-center md:text-left">
+              <div>
+                <a href="#" class="hover:text-strongCyan">FAQ</a>
+              </div>
+              <div>
+                <a href="#" class="hover:text-strongCyan">Contact Us</a>
+              </div>
+            </div>
+
+            <!-- Menu 2 -->
+            <div class="flex flex-col space-y-4 text-center md:text-left">
+              <div>
+                <a href="#" class="hover:text-strongCyan">Privacy Policy</a>
+              </div>
+              <div>
+                <a href="#" class="hover:text-strongCyan">Press Kit</a>
+              </div>
+            </div>
+
+            <!-- Menu 3 -->
+            <div class="flex flex-col space-y-4 text-center md:text-left">
+              <div>
+                <a href="#" class="hover:text-strongCyan">Install guide</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Social buttons -->
+          <div class="flex justify-between w-32 py-1">
+            <a href="#">
+              <img src="./assets/images/icon-facebook.svg" alt="fb" class="duration-200 ficon" />
+            </a>
+
+            <a href="#">
+              <img src="./assets/images/icon-instagram.svg" alt="insta" class="duration-200 ficon" />
+            </a>
+
+            <a href="#">
+              <img src="./assets/images/icon-twitter.svg" alt="tw" class="duration-200 ficon" />
+            </a>
+          </div>
+
+
         </div>
       </div>
     </div>
